[package]
name = "ngdp"
version = "0.1.0"
authors = ["Emil Lauridsen <mine809@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
binrw = "0.10.0"
binstream = { version = "0.1.0", path = "../binstream" }
bitflags = "1.2"
bitvec = "1.0.0"
byteorder = "1.4.3"
flate2 = "1.0.22"
hex = "0.4.3"
libdeflate-sys = "0.11.0"
lookup3 = { path = "../lookup3" }
md-5 = "0.10.5"
reqwest = { version = "0.11.11", features = ["blocking"] }
ribbit = { version = "0.1.0", path = "../ribbit" }
running-average = "0.1.0"
rust-salsa20 = "0.3.0"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.32"
zerocopy = "0.6.1"
