[package]
name = "wowtools-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
ngdp = { version = "0.1.0", path = "../ngdp" }
reqwest = { version = "0.11.11", features = ["blocking"] }
ribbit = { version = "0.1.0", path = "../ribbit" }
serde = { version = "1.0.142", features = ["derive"] }
toml = "0.5.9"
serde_json = "1.0.85"
indicatif = "0.17.1"
running-average = "0.1.0"
md-5 = "0.10.5"
bincode = "1.3.3"
