[package]
name = "wowtools-cli"
license = "GPL-3.0-only"
version = "0.1.0"
authors = ["Emil Lauridsen <mine809@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
bincode = "1.3.3"
indicatif = "0.17.1"
md-5 = "0.10.5"
ngdp = { version = "0.1.0", path = "../ngdp" }
reqwest = { version = "0.11.11", features = ["blocking"] }
ribbit = { version = "0.1.0", path = "../ribbit" }
running-average = "0.1.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.85"
toml = "0.5.9"
