[package]
name = "binstream_derive"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Emil Lauridsen <mine809@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
binstream = { path = "../" }